--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1302,5 +1302,6 @@
         <file alias="settings-sync">images/themed/tokenizable/settings-sync.svg</file>
         <file alias="download_small_thin_outline">images/themed/tokenizable/download_small_thin_outline.svg</file>
         <file alias="more-horizontal">images/themed/tokenizable/more-horizontal.svg</file>
+        <file alias="mega_medium_thin_outline">images/mega_medium_thin_outline.svg</file>
     </qresource>
 </RCC>
