--- a/src/MEGASync/syncs/gui/Backups/ui/RemoveBackupDialog.ui
+++ b/src/MEGASync/syncs/gui/Backups/ui/RemoveBackupDialog.ui
@@ -139,20 +139,30 @@ font-size: 12px;
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="lMoveFolder">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <property name="leftMargin">
+        <number>22</number>
        </property>
-       <property name="text">
-        <string>Move this folder from backups to another location in your cloud drive to get full access to your data. This folder will stop being backed up.</string>
+       <property name="rightMargin">
+        <number>0</number>
        </property>
-       <property name="wordWrap">
-        <bool>true</bool>
-       </property>
-      </widget>
+       <item>
+        <widget class="QLabel" name="lMoveFolder">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Move this folder from backups to another location in your cloud drive to get full access to your data. This folder will stop being backed up.</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QWidget" name="moveToContainer" native="true">
@@ -164,7 +174,10 @@ font-size: 12px;
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <property name="leftMargin">
-         <number>15</number>
+         <number>21</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
         </property>
         <property name="bottomMargin">
          <number>1</number>
@@ -281,14 +294,21 @@ font-size: 12px;
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="lDeleteFolder">
-       <property name="text">
-        <string>Folder will be deleted from MEGA. It won't be deleted from your computer. This action cannot be undone.</string>
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <property name="leftMargin">
+        <number>22</number>
        </property>
-       <property name="wordWrap">
-        <bool>true</bool>
-       </property>
-      </widget>
+       <item>
+        <widget class="QLabel" name="lDeleteFolder">
+         <property name="text">
+          <string>Folder will be deleted from MEGA. It won't be deleted from your computer. This action cannot be undone.</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <spacer name="verticalSpacer_2">
@@ -304,16 +324,6 @@ font-size: 12px;
       </spacer>
      </item>
     </layout>
-   </item>
-   <item>
-    <widget class="Line" name="line">
-     <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -394,8 +404,8 @@ font-size: 12px;
         <string>Stop backup</string>
        </property>
        <property name="icon">
-        <iconset resource="../../../../gui/Resources_light.qrc">
-         <normaloff>:/images/minus-circle.svg</normaloff>:/images/minus-circle.svg</iconset>
+        <iconset resource="../../../../gui/Resources_common.qrc">
+         <normaloff>:/mega_medium_thin_outline</normaloff>:/mega_medium_thin_outline</iconset>
        </property>
        <property name="default">
         <bool>true</bool>
@@ -416,7 +426,7 @@ font-size: 12px;
   </layout>
  </widget>
  <resources>
-  <include location="../../../../gui/Resources_light.qrc"/>
+  <include location="../../../../gui/Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
